# PipeCharacteristic

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pylint.yml
.scannerwork/: report-task.txt
notebook/example_user/: POC_pipecharacteristic.ipynb
src/my_package/: pipecharacteristic.py
